[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "krummzeit"
version = "3.27"
description = "Krummzeit (2014) for seven players"
authors = [{ name = "Trevor BaÄa", email = "trevor.baca@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
keywords = ["abjad", "lilypond", "music composition", "music notation"]
dependencies = ["abjad>=3.27"]

[project.urls]
Homepage = "https://github.com/trevorbaca/krummzeit"

[tool.setuptools]
packages = ["krummzeit"]
package-dir = { "" = "source" }
